--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 excerpt_separator: "<!--more-->"
+exclude: [vendor]
 
 # SITE CONFIGURATION
 baseurl: "" # the subpath of your site, e.g. /blog/
@@ -43,7 +44,7 @@ theme:
   youtube: 
   
   # Scripts
-  google_analytics: # tracking id, e.g. "UA-000000-01"
+  google_analytics: "UA-60029284-1" # tracking id, e.g. "UA-000000-01"
   disqus_shortname:
   
   # Localization strings
